--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -1,3 +1,4 @@
 @import "./utils/_reset.scss";
 @import "./utils/_variables.scss";
+@import "./utils/_icomoon.scss";
 @import "./components/_buttons.scss";
