--- a/src/assets/sass/utils/_reset.scss
+++ b/src/assets/sass/utils/_reset.scss
@@ -443,3 +443,11 @@ fieldset {
 textarea {
   resize: vertical;
 }
+.icon {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  stroke-width: 0;
+  stroke: currentColor;
+  fill: currentColor;
+}
