Add icons and hover effect

--- a/src/assets/sass/_base.scss
+++ b/src/assets/sass/_base.scss
@@ -1,4 +1,5 @@
 @import "./utils/_reset.scss";
 @import "./utils/_variables.scss";
 @import "./utils/_icomoon.scss";
+@import "./utils/_wrapper.scss";
 @import "./components/_buttons.scss";
