Create inputs default, error, disabled, some text and put styles :)

--- a/src/assets/sass/components/_PxNavBar.scss
+++ b/src/assets/sass/components/_PxNavBar.scss
@@ -52,7 +52,8 @@
       }
       &.i-home,
       &.i-font,
-      &.i-button {
+      &.i-button,
+      &.i-input {
         &::before {
           font-family: FontAwesome;
           font-size: 17px;
@@ -72,6 +73,11 @@
       &.i-button {
         &::before {
           content: "\f121";
+        }
+      }
+      &.i-input {
+        &::before {
+          content: "\f11c";
         }
       }
     }
