--- a/src/assets/sass/components/_buttons.scss
+++ b/src/assets/sass/components/_buttons.scss
@@ -1,3 +1,27 @@
+.button-wrapper {
+  span {
+    display: block;
+    font-family: var(--font-ubuntu);
+    font-weight: 400;
+    margin: 0 0 12px 0;
+    font-size: 12px;
+  }
+  .color-disabled {
+    color: #828282;
+  }
+  button {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    .icon-add_shopping_cart {
+      margin: 0 10px 0 0;
+      font-size: 15px;
+    }
+    &.button-cart-end .icon-add_shopping_cart {
+      margin: 0 0 0 10px;
+    }
+  }
+}
 .button {
   background: #e0e0e0;
   border: 0;
