--- a/src/assets/sass/utils/_variables.scss
+++ b/src/assets/sass/utils/_variables.scss
@@ -2,4 +2,5 @@
   --color-black: #000000;
   --color-black-two: #3f3f3f;
   --font-ubuntu: "Ubuntu Mono", monospace;
+  --font-noto: "Noto Sans JP", sans-serif;
 }
